--- a/src/index.pug
+++ b/src/index.pug
@@ -5,6 +5,7 @@ html
     title Flexbox Grid
     
     meta(name="viewport" content="width=device-width, initial-scale=1")
+    link(rel="stylesheet" type="text/css" href="stylesheets/normalize.css" media="screen")
     link(rel="stylesheet" type="text/css" href="./css/flexbox.css")
     link(rel="stylesheet" type="text/css" href="./css/styles.css")
 
