--- a/src/index.pug
+++ b/src/index.pug
@@ -6,8 +6,8 @@ html
     
     meta(name="viewport" content="width=device-width, initial-scale=1")
     link(rel="stylesheet" type="text/css" href="stylesheets/normalize.css" media="screen")
-    link(rel="stylesheet" type="text/css" href="./css/flexbox.css")
-    link(rel="stylesheet" type="text/css" href="./css/styles.css")
+    link(rel="stylesheet" type="text/css" href="./dist/css/flexbox.css")
+    link(rel="stylesheet" type="text/css" href="./dist/css/styles.css")
 
   body
     .container
