--- a/src/sass/flexbox.scss
+++ b/src/sass/flexbox.scss
@@ -1,5 +1,5 @@
 @import 'imports/container';
 @import 'imports/grid';
-@import 'imports/align';
+@import 'imports/alignment';
 @import 'imports/show';
 @import 'imports/typography'; 
