--- a/src/sass/imports/_grid.scss
+++ b/src/sass/imports/_grid.scss
@@ -9,6 +9,12 @@
   &.reverse {
     flex-direction: row-reverse;
   }
+  &.col {
+    flex-direction: column;
+    &.reverse {
+      flex-direction: column-reverse;
+    }
+  }
 }
 .col {
   box-sizing: border-box;
@@ -43,33 +49,6 @@ $sizes: (
       .#{$size}-offset-#{$i} {
         margin-left: percentage($i / 12);
       }
-    }
-    .start-#{$size} {
-      justify-content: flex-start;
-      text-align: start;
-    }
-    .center-#{$size} {
-      justify-content: center;
-      text-align: center;
-    }
-    .end-#{$size} {
-      justify-content: flex-end;
-      text-align: end;
-    }
-    .top-#{$size} {
-      align-items: flex-start;
-    }
-    .middle-#{$size} {
-      align-items: center;
-    }
-    .bottom-#{$size} {
-      align-items: flex-end;
-    }
-    .around-#{$size} {
-      justify-content: space-around;
-    }
-    .between-#{$size} {
-      justify-content: space-between;
     }
     .first-#{$size} {
       order: -1;
