--- a/src/sass/styles.scss
+++ b/src/sass/styles.scss
@@ -1,8 +1,21 @@
 $primary-color: #2c3e50;
-$secondary-color: #1abc9c;
+$secondary-color: #27ae60;
 $color1: #9b59b6;
 $color2: #3498db;
 $background-color: #ecf0f1;
+body {
+  font-family: 'Roboto', sans-serif;
+  color: $primary-color;
+  section {
+    padding: 50px 0;
+    background-color: #bdc3c7;
+    box-sizing: border-box;
+  }
+  h1 {
+    color: $secondary-color;
+  }
+}
+
 .bold {
   font-weight: bold;
 }
@@ -22,6 +35,7 @@ header {
   }
 }
 
+// Sansbox section
 .sandbox {
   .sandbox-container {
     border-radius: 3px;
@@ -30,7 +44,7 @@ header {
     height: 128px;
     overflow: hidden;
     background-color: $background-color;
-    .box{
+    .box {
       padding: 10px;
       box-shadow: 0px 1px 4px $primary-color;
     }
@@ -50,13 +64,23 @@ header {
   }
 }
 
-body {
-  font-family: 'Roboto', sans-serif;
-  color: $primary-color;
-  section {
-    padding: 50px 0;
-    height: 100vh;
-    background-color: #bdc3c7;
-    box-sizing: border-box;
+// Responsive section
+.example {
+  .box {
+    padding: 1rem;
+    margin: 1rem;
+    background: $secondary-color;
   }
+}
+
+.code {
+  border-radius: 3px;
+  box-sizing: border-box;
+  box-shadow: 0px 3px 8px $primary-color;
+  overflow: hidden;
+  background-color: $background-color;
+  min-height: 100px;
+  margin: 20px 0;
+  padding: 0 16px;
+  color: $secondary-color;
 }
