Added options, offsets and width section

--- a/src/index.pug
+++ b/src/index.pug
@@ -13,6 +13,7 @@ html
   body
     include views/header
     include views/sandbox
+    include views/options
     include views/responsive
     include views/fluid
     include views/offsets
