--- a/src/sass/styles.scss
+++ b/src/sass/styles.scss
@@ -1,3 +1,4 @@
+@import 'imports/_queries';
 $primary-color: #2c3e50;
 $secondary-color: #27ae60;
 $color1: #9b59b6;
@@ -7,7 +8,7 @@ body {
   font-family: 'Roboto', sans-serif;
   color: $primary-color;
   section {
-    padding: 50px 0;
+    padding: 16px 0;
     background-color: #bdc3c7;
     box-sizing: border-box;
   }
@@ -21,7 +22,7 @@ body {
 }
 
 .title {
-  font-size: 6rem;
+  font-size: 5rem;
 }
 
 .subtitle {
@@ -38,15 +39,13 @@ header {
 // Sansbox section
 .sandbox {
   .sandbox-container {
-    border-radius: 3px;
     box-sizing: border-box;
-    box-shadow: 0px 3px 8px $primary-color;
     height: 128px;
     overflow: hidden;
     background-color: $background-color;
+    margin: 0 auto;
     .box {
-      padding: 10px;
-      box-shadow: 0px 1px 4px $primary-color;
+      padding: 8px;
     }
     .box0 {
       background: $secondary-color;
@@ -61,14 +60,69 @@ header {
   .controls {
     padding: 1rem 0;
     box-sizing: border-box;
+    .title {
+      font-size: 1rem;
+      margin: 0;
+      margin-top: 1rem;
+    }
+  }
+}
+
+// Option section
+.table-responsive {
+  width: 100%;
+  overflow-y: hidden;
+}
+
+table {
+  width: 100%;
+  max-width: 100%;
+  border: 1px solid lighten($primary-color, 40);
+  background-color: $background-color;
+  thead,
+  tbody,
+  tr,
+  th,
+  td {
+    border: inherit;
+  }
+  thead,
+  td.bold {
+    // background-color: $secondary-color;
+    // color: $primary-color;
+    background-color: $primary-color;
+    color: $secondary-color;
+  }
+  tr,
+  th,
+  td {
+    padding: 8px;
+    min-width: 120px;
+  }
+  .title {
+    font-size: 1rem;
+  }
+  .subtitle {
+    font-size: 0.7rem;
+  }
+  td pre {
+    margin: 0;
+    color: $secondary-color;
+  }
+  .odd {
+    background-color: $background-color;
+  }
+  .even {
+    background-color: #bdc3c7;
   }
 }
 
 // Responsive section
 .example {
   .box {
-    padding: 1rem;
-    margin: 1rem;
+    min-width: 20px;
+    min-height: 20px;
+    margin-bottom: 1rem;
     background: $secondary-color;
   }
 }
@@ -76,11 +130,26 @@ header {
 .code {
   border-radius: 3px;
   box-sizing: border-box;
-  box-shadow: 0px 3px 8px $primary-color;
   overflow: hidden;
   background-color: $background-color;
   min-height: 100px;
   margin: 20px 0;
   padding: 0 16px;
   color: $secondary-color;
+}
+
+// Offset section
+.heart {
+  .border,
+  .content {
+    padding: 1rem 0;
+    margin: 0 -8px;
+    height: 20px;
+  }
+  .border {
+    background: $secondary-color;
+  }
+  .content {
+    background: #e74c3c;
+  }
 }
