--- a/src/views/header.pug
+++ b/src/views/header.pug
@@ -1,4 +1,4 @@
 header: .container
-  .main.row.center-xs.middle-xs: .col.xs-12 
+  .main.row.middle-xs: .col.xs-12 
     .title.center.bold Flexbox Grid
     .subtitle.center Super powerful flex grid system
