--- a/src/views/offsets.pug
+++ b/src/views/offsets.pug
@@ -3,15 +3,46 @@ section.grid_size
     .row: .col.xs-12
       h1.bold Offsets
       h4.
-        Converts the container into a full width container, just replace .container for .container-fluid
-        
-    
+        Push columns to the rights usign offsets.
+    .heart.row: .col.xs-12.sm-10.sm-offset-2.md-8.md-offset-3
+        .row
+          .col.xs-1.xs-offset-2: .border
+          .col.xs-1.xs-offset-3: .border
+        .row
+          .col.xs-1.xs-offset-1: .border
+          .col.xs-1: .content
+          .col.xs-1: .border
+          .col.xs-1.xs-offset-1: .border
+          .col.xs-1: .content
+          .col.xs-1: .border
+        .row
+          .col.xs-1: .border
+          .col.xs-3: .content          
+          .col.xs-1: .border
+          .col.xs-3: .content          
+          .col.xs-1: .border
+        .row
+          .col.xs-1: .border
+          .col.xs-7: .content          
+          .col.xs-1: .border
+        .row
+          .col.xs-1.xs-offset-1: .border
+          .col.xs-5: .content          
+          .col.xs-1: .border
+        .row
+          .col.xs-1.xs-offset-2: .border
+          .col.xs-3: .content          
+          .col.xs-1: .border
+        .row
+          .col.xs-1.xs-offset-3: .border
+          .col.xs-1: .content          
+          .col.xs-1: .border
+        .row
+          .col.xs-1.xs-offset-4: .border
     .code.row: .col.xs-12
         pre(contenteditable="true").
-          &lt;div class='container-fluid'&gt;
-            &lt;div class='row'&gt;
-              &lt;div class='col xs-12 sm-4 md-6 lg-8'&gt;
-                &lt;div class='box'&gt;Responsive&lt;/div&gt;
-              &lt;/div&gt;
+          &lt;div class='row'&gt;
+            &lt;div class='col xs-2 xs-offset-2 md-4 md-offset-4'&gt;
+              &lt;div class='box'&gt;Offsets&lt;/div&gt;
             &lt;/div&gt;
           &lt;/div&gt;
