Change from grid to layout

--- a/src/index.pug
+++ b/src/index.pug
@@ -13,15 +13,16 @@ html
   body
     include views/header
     include views/sandbox
-    include views/options
+    //- include views/options
     include views/responsive
-    include views/fluid
-    include views/offsets
-    include views/width
     include views/nested
-    include views/alignment
-    include views/distribution
+    include views/flex
     include views/order
+    include views/offsets
+    include views/alignment
+    include views/fluid
+    include views/width
+    include views/distribution
     include views/show
     include views/units
     script(src='./dist/js/main.js')
