--- a/src/sass/flexbox.scss
+++ b/src/sass/flexbox.scss
@@ -1,5 +1,10 @@
 @import 'imports/container';
 @import 'imports/grid';
+@import 'imports/flex';
 @import 'imports/alignment';
 @import 'imports/show';
+@import 'imports/order';
+@import 'imports/offset';
+@import 'imports/padding';
+@import 'imports/margin';
 @import 'imports/typography'; 
