--- a/src/views/header.pug
+++ b/src/views/header.pug
@@ -1,4 +1,3 @@
-header: .container
-  .main.row.middle-xs: .col.xs-12 
-    .title.center.bold Flexbox Grid
-    .subtitle.center Super powerful flex grid system
+header.layout-column.layout-align-center-center
+  .title.bold Layout Flexbox
+  .subtitle Super powerful flex layout
