--- a/src/sass/imports/_container.scss
+++ b/src/sass/imports/_container.scss
@@ -1,10 +1,10 @@
 @import 'queries';
 
 $xs-container: 95%;
-$sm-container: 90%;
-$md-container: 80%;
-$lg-container: 75%;
-$xl-container: 70%;
+$sm-container: 80%;
+$md-container: 75%;
+$lg-container: 70%;
+$xl-container: 65%;
 
 .container-fluid,
 .container {
@@ -17,16 +17,16 @@ $xl-container: 70%;
 
 .container {
   width: $xs-container;
-  @media #{$sm-screen-and-up} {
+  @media #{$xs-screen-and-up} {
     width: $sm-container;
   }
-  @media #{$md-screen-and-up} {
+  @media #{$sm-screen-and-up} {
     width: $md-container;
   }
-  @media #{$lg-screen-and-up} {
+  @media #{$md-screen-and-up} {
     width: $lg-container;
   }
-  @media #{$xl-screen-and-up} {
+  @media #{$lg-screen-and-up} {
     width: $xl-container;
   }
 }
