--- a/src/sass/imports/_grid.scss
+++ b/src/sass/imports/_grid.scss
@@ -1,66 +1,64 @@
 @import '_queries';
 
-.row {
-  display: flex;
-  flex: 0 1 auto;
-  flex-direction: row;
-  flex-wrap: wrap;
-  margin: 0 -8px;
-  @media #{$sm-screen-and-up} {
-    margin-left: -8px;
-    margin-right: -8px;
-  }
-  box-sizing: border-box;
-  &.reverse {
-    flex-direction: row-reverse;
-  }
-  &.col {
-    flex-direction: column;
-    margin: 0;
-    &.reverse {
-      flex-direction: column-reverse;
-    }
-  }
-}
-.col {
-  flex: 1 0 0%;
-  max-width: 100%;
-  padding-left: 8px;
-  padding-right: 8px;
-  box-sizing: border-box;
-  &.reverse {
-    flex-direction: column-reverse;
-  }
-}
-
-$sizes: (
-  xs: $xs-screen-and-up,
-  sm: $sm-screen-and-up,
-  md: $md-screen-and-up,
-  lg: $lg-screen-and-up,
-  xl: $xl-screen-and-up,
+$sizes: ( 
+  xs: $xs-screen, 
+  gt-xs: $xs-screen-and-up, 
+  sm: $sm-screen, 
+  gt-sm: $sm-screen-and-up, 
+  md: $md-screen, 
+  gt-md: $md-screen-and-up, 
+  lg: $lg-screen, 
+  gt-lg: $lg-screen-and-up, 
+  xl: $xl-screen
 );
 
-@each $size, $query in $sizes {
-  @media #{$query} {
-    @for $i from 1 through 12 {
-      .#{$size}-#{$i},
-      .#{$size}-offset-#{$i} {
-        box-sizing: border-box;
-      }
-      .#{$size}-#{$i} {
-        flex-basis: percentage($i / 12);
-        max-width: percentage($i / 12);
-      }
-      .#{$size}-offset-#{$i} {
-        margin-left: percentage($i / 12);
-      }
+.layout,
+.layout-column,
+.layout-row,
+.layout-row-reverse,
+.layout-column-reverse {
+  box-sizing: border-box;
+  display: flex;
+}
+.layout-column {
+  flex-direction: column;
+}
+.layout-row {
+  flex-direction: row;
+}
+.layout-row-reverse {
+  flex-direction: row-reverse;
+}
+.layout-column-reverse {
+  flex-direction: column-reverse;
+}
+@each $name, $value in $sizes {
+  @media #{$value} {
+    .layout-#{$name},
+    .layout-#{$name}-column,
+    .layout-#{$name}-row {
+      box-sizing: border-box;
+      display: flex;
     }
-    .first-#{$size} {
-      order: -1;
+    .layout-#{$name}-column {
+      flex-direction: column;
     }
-    .last-#{$size} {
-      order: 1;
+    .layout-#{$name}-row {
+      flex-direction: row;
     }
   }
+}
+.layout-fill {
+  margin: 0;
+  width: 100%;
+  min-height: 100%;
+  height: 100%;
+}
+
+.layout-wrap {
+  flex-wrap: wrap;
+}
+
+.layout-nowrap {
+  flex-wrap: nowrap;
 }
