--- a/src/sass/styles.scss
+++ b/src/sass/styles.scss
@@ -1,19 +1,34 @@
-@import 'imports/_queries';
-$primary-color: #2c3e50;
-$secondary-color: #27ae60;
+@import 'imports/queries';
+$primary-color: #27ae60;
+$secondary-color: #2c3e50;
 $color1: #9b59b6;
 $color2: #3498db;
+$color3: #e74c3c;
 $background-color: #ecf0f1;
 body {
   font-family: 'Roboto', sans-serif;
-  color: $primary-color;
+  color: $secondary-color;
+  background-color: #bdc3c7;
   section {
-    padding: 16px 0;
+    padding: 30px 0;
     background-color: #bdc3c7;
     box-sizing: border-box;
-  }
-  h1 {
-    color: $secondary-color;
+    .header {
+      .title {
+        color: $primary-color;
+        font-size: 28px;
+        margin: 8px 0;
+      }
+      .subtitle {
+        font-size: 16px;
+        margin: 4px 0;
+      }
+    }
+    code {
+      color: $primary-color;
+      background-color: $background-color;
+      padding: 0 4px;
+    }
   }
 }
 
@@ -21,18 +36,13 @@ body {
   font-weight: bold;
 }
 
-.title {
-  font-size: 5rem;
-}
-
-.subtitle {
-  font-size: 1.8rem;
-}
-
 header {
   background-color: $background-color;
-  .main {
-    height: 100vh;
+  height: 100vh;
+  .title {
+    font-size: 44px;
+  }.subtitle {
+    font-size: 22px;
   }
 }
 
@@ -46,9 +56,12 @@ header {
     margin: 0 auto;
     .box {
       padding: 8px;
+      &>* {
+        display: inline;
+      }
     }
     .box0 {
-      background: $secondary-color;
+      background: $primary-color;
     }
     .box1 {
       background: $color1;
@@ -58,12 +71,10 @@ header {
     }
   }
   .controls {
-    padding: 1rem 0;
     box-sizing: border-box;
     .title {
       font-size: 1rem;
       margin: 0;
-      margin-top: 1rem;
     }
   }
 }
@@ -77,7 +88,7 @@ header {
 table {
   width: 100%;
   max-width: 100%;
-  border: 1px solid lighten($primary-color, 40);
+  border: 1px solid lighten($secondary-color, 40);
   background-color: $background-color;
   thead,
   tbody,
@@ -90,8 +101,8 @@ table {
   td.bold {
     // background-color: $secondary-color;
     // color: $primary-color;
-    background-color: $primary-color;
-    color: $secondary-color;
+    background-color: $secondary-color;
+    color: $primary-color;
   }
   tr,
   th,
@@ -100,14 +111,15 @@ table {
     min-width: 120px;
   }
   .title {
-    font-size: 1rem;
+    font-size: 14px;
   }
   .subtitle {
-    font-size: 0.7rem;
+    font-size: 10px;
   }
   td pre {
     margin: 0;
-    color: $secondary-color;
+    color: $primary-color;
+    display: inline;
   }
   .odd {
     background-color: $background-color;
@@ -119,37 +131,71 @@ table {
 
 // Responsive section
 .example {
+  background-color: $secondary-color;
+  margin: 20px 0;  
   .box {
-    min-width: 20px;
-    min-height: 20px;
-    margin-bottom: 1rem;
-    background: $secondary-color;
+    min-width: 40px;
+    min-height: 40px;
+    background: $primary-color;
+    color: $background-color;
+    display: flex;
+    align-content: center;
+    text-align: center;
+    justify-content: center;
+    align-items: center;
+    font-size: 16px;
+    margin: 4px;
+    &>* {
+      display: inline;
+    }
+  }
+  &.level-1 {
+    background-color: darken($primary-color, 10) !important;
+  }
+  .level-2 {
+    background-color: darken($primary-color, 20);
+  }
+  .level-3 {
+    background-color: darken($primary-color, 30);
+  }
+  .level-1,
+  .level-2,
+  .level-3 {
+    margin: 8px;
+    padding: 8px;
+    .box {
+      display: flex;
+      color: $background-color;
+      justify-content: center;
+      align-items: center;
+      height: 100%;
+    }
   }
 }
 
 .code {
-  border-radius: 3px;
   box-sizing: border-box;
   overflow: hidden;
   background-color: $background-color;
   min-height: 100px;
   margin: 20px 0;
   padding: 0 16px;
-  color: $secondary-color;
+  color: $primary-color;
 }
 
 // Offset section
 .heart {
+  margin: 16px 0;
   .border,
   .content {
     padding: 1rem 0;
+    height: 16px;
     margin: 0 -8px;
-    height: 20px;
   }
   .border {
-    background: $secondary-color;
+    background: $primary-color;
   }
   .content {
-    background: #e74c3c;
+    background: $color3;
   }
 }
