Padding, margin, wrap and fill sections

--- a/src/index.pug
+++ b/src/index.pug
@@ -20,6 +20,12 @@ html
     include views/order
     include views/offsets
     include views/alignment
+    include views/padding
+    include views/margin
+    include views/wrap
+    include views/fill
+    
+
     include views/fluid
     include views/width
     include views/distribution
