--- a/src/views/fluid.pug
+++ b/src/views/fluid.pug
@@ -1,10 +1,10 @@
 section.grid_size
   .container-fluid
-    .row: .col-xs-12
+    .row
       h1.bold Fluid
       h4.
         Converts the container into a full width container, just replace .container for .container-fluid
-    .code.row: .col-xs-12
+    .code.row
         pre(contenteditable="true").
           &lt;div class='container-fluid'&gt;
             &lt;div class='layout-row'&gt;
