--- a/src/views/nested.pug
+++ b/src/views/nested.pug
@@ -18,7 +18,7 @@ section.nested
             .flex.box L-3
       .flex.layout-column: .flex-100.box L-1
 
-    .code.row: .col-xs-12
+    .code.row
         pre(contenteditable="true").
           &lt;div class="layout-row layout-xs-column level-1"&gt;
             &lt;div class="flex"&gt;
