--- a/src/views/offsets.pug
+++ b/src/views/offsets.pug
@@ -7,13 +7,13 @@ section.offsets
         to set its offset percentage within the layout container.
         Value must be multiples of 5, 33 or 66.
 
-    .example.layout-row.layout-padding
+    .example.layout-row
       .flex.flex-offset-25: .box .flex.flex-offset-25
       .flex-40.flex-order--1: .box .flex-40.flex-order--1
     
-    .code.row: .col-xs-12
+    .code.row
         pre(contenteditable="true").
-          &lt;div class='layout-row layout-padding'&gt;
+          &lt;div class='layout-row'&gt;
             &lt;div class='flex flex-offset-25'&gt;
               &lt;div class='box'&gt;.flex.flex-offset-25&lt;/div&gt;
             &lt;/div&gt;
