--- a/src/views/order.pug
+++ b/src/views/order.pug
@@ -5,29 +5,7 @@ section.order
       .subtitle.
         Add the class <code>.flex-order</code> to reorder elements within
         layout container. The values goes from -20 to 20.
-    .example.layout-row.layout-padding
-      .flex.flex-order--1: .box .flex-order--1
-      .flex.flex-order-4: .box .flex-order-4
-      .flex.flex-order-1: .box .flex-order-1
-      .flex.flex-order--3: .box .flex-order--3
     
-    .code.row: .col-xs-12
-        pre(contenteditable="true").
-          &lt;div class='layout-row layout-padding'&gt;
-            &lt;div class='flex flex-order--1'&gt;
-              &lt;div class='box'&gt;.flex-order--1&lt;/div&gt;
-            &lt;/div&gt;
-            &lt;div class='flex flex-order-4'&gt;
-              &lt;div class='box'&gt;.flex-order-4&lt;/div&gt;
-            &lt;/div&gt;
-            &lt;div class='flex flex-order-1'&gt;
-              &lt;div class='box'&gt;.flex-order-1&lt;/div&gt;
-            &lt;/div&gt;
-            &lt;div class='flex flex-order--3'&gt;
-              &lt;div class='box'&gt;.flex-order--3&lt;/div&gt;
-            &lt;/div&gt;
-          &lt;/div&gt;
-          
     .table-responsive: table
         thead
           tr
@@ -66,3 +44,26 @@ section.order
           tr.odd
             td flex-order-xl
             td width >= 1920px
+            
+    .example.layout-row
+      .flex.flex-order--1: .box .flex-order--1
+      .flex.flex-order-4: .box .flex-order-4
+      .flex.flex-order-1: .box .flex-order-1
+      .flex.flex-order--3: .box .flex-order--3
+    
+    .code.row
+        pre(contenteditable="true").
+          &lt;div class='layout-row'&gt;
+            &lt;div class='flex flex-order--1'&gt;
+              &lt;div class='box'&gt;.flex-order--1&lt;/div&gt;
+            &lt;/div&gt;
+            &lt;div class='flex flex-order-4'&gt;
+              &lt;div class='box'&gt;.flex-order-4&lt;/div&gt;
+            &lt;/div&gt;
+            &lt;div class='flex flex-order-1'&gt;
+              &lt;div class='box'&gt;.flex-order-1&lt;/div&gt;
+            &lt;/div&gt;
+            &lt;div class='flex flex-order--3'&gt;
+              &lt;div class='box'&gt;.flex-order--3&lt;/div&gt;
+            &lt;/div&gt;
+          &lt;/div&gt;
