--- a/src/views/width.pug
+++ b/src/views/width.pug
@@ -1,10 +1,10 @@
 section.width
   .container
-    .row: .col-xs-12
+    .row
       h1.bold Custom width
       h4.
         The width can be automatic.
-    .example.row: .col-xs-12
+    .example.row
       .row
         .col-md-1: .box
         .col-xs: .box
@@ -14,7 +14,7 @@ section.width
         .col-xs: .box
         .col-xs: .box
 
-    .code.row: .col-xs-12
+    .code.row
         pre(contenteditable="true").
           &lt;div class='row'&gt;
             &lt;div class='col-xs-2 col-xs-offset-2 col-md-4 col-md-offset-4'&gt;
